# leshiy

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: android-ci.yml  android-release.yml  ci.yml  desktop-ci.yml  desktop-release.yml  release.yml  verify-release-pointer.yml
apps/android/: .gitignore  README.md  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/dev/leshiy/: AppState.kt  BootAction.kt  BootReceiver.kt  KeepalivePingReceiver.kt  LeshiyTileService.kt  LeshiyVpnService.kt  LeshiyWidgetProvider.kt  MainActivity.kt  OnboardingGate.kt  TileAction.kt
apps/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_qs_leshiy.xml  widget_bg.xml
apps/android/app/src/main/res/layout/: widget_leshiy.xml
apps/android/app/src/main/res/values/: strings.xml
apps/android/app/src/main/res/values-ru/: strings.xml
apps/android/app/src/main/res/xml/: leshiy_widget_info.xml  shortcuts.xml
apps/android/app/src/test/java/dev/leshiy/: AppLockTest.kt  BatteryPromptTest.kt  BootActionTest.kt  CascadeTest.kt  CidrPartsTest.kt  ConnFailureEdgeTest.kt  ConnStatsTest.kt  FormatDurationTest.kt  ManageStateTest.kt  ManageSudoTest.kt  MergeDomainRoutesTest.kt  (+7 more)
apps/desktop/: .gitignore  README.md  TESTING.md  WINDOWS-SIGNING.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  mobile.rs
apps/desktop/src/components/: CloseWindowDialog.tsx  ConfigChip.tsx  ConfigSheet.tsx  ConnectButton.tsx  ConnectScreen.tsx  InstallHelperDialog.tsx  LanguageMenu.tsx  ModePill.tsx  PerAppSheet.tsx  SettingsSheet.tsx  SplitTunnelSheet.tsx  StatusReadout.tsx  TopBar.tsx  icons.tsx
apps/desktop/src/i18n/: en.json  ru.json
apps/desktop/src/lib/: api.ts  mode.ts  presets.ts  types.ts  uri.ts
apps/desktop/src/state/: useSettings.ts  useTunnel.ts
apps/gui/: README.md  TESTING.md  WINDOWS-SIGNING.md  index.html  package.json
apps/gui/scripts/: render-icon.mjs
apps/gui/src/: index.css
apps/gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/gui/src-tauri/src/: lib.rs  main.rs  mobile.rs
apps/gui/src/components/: Atmosphere.tsx  ConfigSheet.tsx  ConnectButton.tsx  PerAppSheet.tsx  SettingsSheet.tsx  StatusReadout.tsx  TopBar.tsx  icons.tsx
apps/gui/src/components/ui/: button.tsx
apps/gui/src/i18n/: en.json  index.ts  ru.json
apps/gui/src/lib/: format.ts  haptics.ts  types.ts
apps/gui/src/state/: useProfiles.ts  useSettings.ts
crates/leshiy/: Cargo.toml
crates/leshiy-client/: Cargo.toml
crates/leshiy-client/examples/: connect.rs
crates/leshiy-client/src/: error.rs  lib.rs  listener.rs  profile.rs  pump.rs  reconnect.rs  runtime.rs  settings.rs  split_tunnel.rs  stats.rs  stream.rs  subscription.rs  supervisor.rs  sysproxy.rs  transport.rs
crates/leshiy-client/src/adapter/: dial.rs  mod.rs  quic.rs  reality.rs
crates/leshiy-client/tests/: reality_adapter_e2e.rs
crates/leshiy-core/: Cargo.toml
crates/leshiy-core/src/: error.rs  frame.rs  handshake.rs  icmp.rs  lib.rs  mux.rs  protect.rs  session.rs  transport.rs  version.rs
crates/leshiy-helper/: Cargo.toml
crates/leshiy-helper/src/: auth.rs  client.rs  elevate.rs  error.rs  install.rs  lib.rs  proto.rs  runner.rs  server.rs
crates/leshiy-helper/src/transport/: mod.rs  unix.rs  windows.rs
crates/leshiy-helper/tests/: duplex_dispatch.rs  root_smoke.rs
crates/leshiy-mobile/: Cargo.toml
crates/leshiy-mobile/src/: bridge.rs  error.rs  lib.rs  profiles.rs  provision.rs  runtime.rs  server.rs  status.rs
crates/leshiy-provision/: Cargo.toml
crates/leshiy-provision/src/: docker.rs  engine.rs  error.rs  lib.rs  ssh.rs  ssh_russh.rs  vault.rs
crates/leshiy-provision/tests/: live_ssh.rs  ssh_live.rs
crates/leshiy-quic/: Cargo.toml
crates/leshiy-quic/src/: client.rs  codec.rs  connector.rs  dgram.rs  endpoint.rs  lib.rs  masquerade.rs  server.rs
crates/leshiy-quic/tests/: connector_e2e.rs  quic_e2e.rs
crates/leshiy-reality/: Cargo.toml
crates/leshiy-reality/src/: addr.rs  auth.rs  client.rs  config.rs  connlimit.rs  control.rs  egress.rs  error.rs  handshake.rs  lib.rs  netguard.rs  ratelimit.rs  replay.rs  server.rs  sqlite_store.rs  tunnel.rs  user.rs
crates/leshiy-reality/tests/: handshake_pair.rs  icmp_tunnel.rs  passthrough.rs  reality_e2e.rs  socks_udp_associate.rs  tunnel.rs  udp_tunnel.rs  user_enforcement.rs
crates/leshiy-tls/: Cargo.toml
crates/leshiy-tls/examples/: bench_aead.rs
crates/leshiy-tls/src/: camouflage.rs  client_hello.rs  error.rs  fingerprint.rs  ja.rs  lib.rs  record.rs  server_hello.rs
crates/leshiy-tls/src/tls13/: kdf.rs  messages.rs  mlkem.rs  mod.rs  record.rs  schedule.rs  suite.rs
crates/leshiy-tls/tests/: acceptance.rs
crates/leshiy-tls/tests/fixtures/: SOURCE.md  rfc8448.md  yandex.ja3  yandex.ja4  yandex.ja4_r
crates/leshiy-tun/: Cargo.toml
crates/leshiy-tun/src/: discover.rs  engine.rs  lib.rs  netstack.rs  resolver.rs  route_plan.rs
crates/leshiy-tun/src/sys/: android.rs  cmd.rs  linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
crates/leshiy/src/: cli.rs  client.rs  host.rs  lifecycle.rs  main.rs  quickstart.rs  reality_config.rs  remote_cli.rs  server.rs  tun.rs  ui.rs  user_cli.rs  vpn.rs
crates/leshiy/tests/: e2e.rs  quickstart.rs  reality_cli_smoke.rs
scripts/: .gitignore  RELEASE.md  build-android-jni.sh  check-latest-pointer.sh  gen-windows-cert.ps1  install-client.sh  install.sh  leshiy-helper.service  leshiy.service.in  leshiyctl  minisign.pub
scripts/test/: check_latest_pointer_test.sh  smoke_install.sh
(+58 files in other folders)
