[workspace]
resolver = "2"
members = ["crates/leshiy-core", "crates/leshiy", "crates/leshiy-tls", "crates/leshiy-reality", "crates/leshiy-quic", "crates/leshiy-client", "crates/leshiy-tun", "crates/leshiy-helper", "crates/leshiy-provision"]
exclude = ["apps/gui/src-tauri"]

[workspace.package]
edition = "2024"
version = "1.5.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
snow = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
proptest = "1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
chacha20poly1305 = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
subtle = "2"
ml-kem = { version = "0.3", features = ["getrandom", "zeroize"] }
rusqlite = { version = "0.40", features = ["bundled"] }
quinn = { version = "0.11", features = ["rustls-aws-lc-rs"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
bytes = "1"
webpki-roots = "0.26"
qrcode = "0.14"
terminal_size = "0.4"
# PEM parsing via rustls-pki-types' PemObject (replaces the unmaintained
# rustls-pemfile, RUSTSEC-2025-0134). Same crate rustls re-exports as
# `rustls::pki_types`, so the DER types interoperate. `std` for the Error impl.
rustls-pki-types = { version = "1", features = ["std"] }
async-trait = "0.1"
russh = "0.45"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
# Helper IPC (Phase 4): SO_PEERCRED peer-uid auth on the control socket (`socket`),
# plus `getuid` for the default allow-uid / SO_PEERCRED tests (`user`). Linux.
nix = { version = "0.29", features = ["socket", "user", "fs"] }
# VPN / full-tunnel (Phase 2). `tun` (rust-tun) is the device crate ipstack's own
# examples integrate with — its async device implements tokio AsyncRead/AsyncWrite,
# which `ipstack::IpStack::new` requires.
tun = { version = "0.8", features = ["async"] }
ipstack = "1"
net-route = "0.4"
rpassword = "7"

# Release profile: tuned for throughput + smaller binary on the data plane and
# on mobile. `panic` is left at the default "unwind" on purpose — a panicking
# tokio task should unwind without taking down the whole server/helper process
# (panic = "abort" would let one malformed-input panic drop all connected users).
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
