[package]
name = "leshiy-client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
leshiy-reality = { path = "../leshiy-reality" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
