[package]
name = "leshiy-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
snow.workspace = true
thiserror.workspace = true
zeroize.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true

[dev-dependencies]
proptest.workspace = true
# `test-util` (not part of `full`) enables `#[tokio::test(start_paused = true)]` so timeout
# tests fast-forward virtual time instead of blocking on the real wall clock.
tokio = { workspace = true, features = ["full", "test-util"] }
