[package]
name = "leshiy-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leshiy-helper"
path = "src/bin/leshiy-helper.rs"

[dependencies]
leshiy-client = { path = "../leshiy-client" }
leshiy-tun = { path = "../leshiy-tun" }
leshiy-reality = { path = "../leshiy-reality" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
nix = { workspace = true }
# Binary-only:
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
