[package]
name = "leshiy-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leshiy-helper"
path = "src/bin/leshiy-helper.rs"

[dependencies]
# Cross-platform: protocol types + HelperClient (proto/client/error/install all build
# everywhere; State/Rates/TransportPref come from leshiy-client).
leshiy-client = { path = "../leshiy-client" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Binary-only:
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# Unix-only: the daemon side (control server, EngineRunner, peer-uid auth) needs Unix
# domain sockets + SO_PEERCRED/getpeereid. The auth/server/runner modules are cfg(unix).
[target.'cfg(unix)'.dependencies]
leshiy-tun = { path = "../leshiy-tun" }
leshiy-reality = { path = "../leshiy-reality" }
async-trait = { workspace = true }
nix = { workspace = true }
