[package]
name = "leshiy-provision"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
russh = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
