[package]
name = "leshiy-quic"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
quinn.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
leshiy-reality = { path = "../leshiy-reality" }
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
bytes.workspace = true
hex.workspace = true
sha2.workspace = true
webpki-roots.workspace = true
async-trait.workspace = true

[dev-dependencies]
rcgen.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
bytes.workspace = true
hex.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
