[package]
name = "leshiy-reality"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
leshiy-tls = { path = "../leshiy-tls" }
leshiy-core = { path = "../leshiy-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zeroize.workspace = true
base64.workspace = true
hex.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
rcgen.workspace = true
hmac.workspace = true
subtle.workspace = true
rusqlite.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
proptest.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
