[package]
name = "leshiy-tls"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
sha2.workspace = true
md-5.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
ml-kem.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
proptest.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
