[package]
name = "leshiy-tun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leshiy-client = { path = "../leshiy-client" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tun-rs = { workspace = true }
ipstack = { workspace = true }
net-route = { workspace = true }
netdev = { workspace = true }
