[package]
name = "leshiy-tun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leshiy-client = { path = "../leshiy-client" }
# `process` (beyond the workspace defaults): bulk route install via a single `ip -batch`.
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tun = { workspace = true }
ipstack = { workspace = true }
net-route = { workspace = true }
