[package]
name = "leshiy"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "leshiy"
path = "src/main.rs"

[dependencies]
anstyle = "1"
anstream = "0.6"
leshiy-core = { path = "../leshiy-core" }
leshiy-reality = { path = "../leshiy-reality" }
leshiy-quic = { path = "../leshiy-quic" }
leshiy-client = { path = "../leshiy-client" }
leshiy-tun = { path = "../leshiy-tun" }
leshiy-helper = { path = "../leshiy-helper" }
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
base64.workspace = true
hex.workspace = true
zeroize.workspace = true
rand.workspace = true
x25519-dalek.workspace = true
serde_json.workspace = true
qrcode.workspace = true
terminal_size.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
