[package]
name = "leshiy-gui"
version = "1.7.3"
description = "Leshiy desktop application"
authors = ["Mikhail Bigun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leshiy_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Cross-platform clipboard (Android's webview blocks navigator.clipboard).
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leshiy-client = { path = "../../../crates/leshiy-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
# Logging. On Android `paranoid-android` forwards this to logcat (`adb logcat -s leshiy`);
# on desktop there's no subscriber so it's a no-op.
tracing = "0.1"
# Subscription fetching. rustls-tls (no system OpenSSL); portable to Android.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }

# Desktop-only: the system tray, and the privileged `leshiy-helper` (elevation model). On
# Android the VPN runs in-process via VpnService, so neither is used or compiled there.
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
leshiy-helper = { path = "../../../crates/leshiy-helper" }
# Desktop keeps its existing config-dir path (~/.config/Leshiy etc.) so users don't lose
# settings; Android uses Tauri's app_config_dir instead (see `config_dir`).
directories = "5"

# Android-only: the in-process VPN engine (TunEngine driven with the VpnService fd). The
# Rust<->Kotlin bridge goes through Tauri's mobile-plugin channel (run_mobile_plugin), not raw JNI.
# tracing + paranoid-android forward the crates' `tracing` logs to logcat (`adb logcat`), so
# connect/dial failures are diagnosable on-device.
[target.'cfg(target_os = "android")'.dependencies]
leshiy-tun = { path = "../../../crates/leshiy-tun" }
tracing-subscriber = "0.3"
paranoid-android = "0.2"
# Camera QR scanning (mobile-only plugin).
tauri-plugin-barcode-scanner = "2"

